fixing form sending messages, spacing and labbels

--- a/style.css
+++ b/style.css
@@ -397,6 +397,7 @@ p {
 
 .form-group {
     flex: 1;
+    margin: 5px;
     display: flex;
     flex-direction: column;
 }
